<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:title="@string/InicioDrawer"
            android:id="@+id/inicioFragment"
            android:icon="@drawable/home"/>

        <item
            android:title="@string/PublicationsDrawer"
            android:id="@+id/publicacionesFragment"
            android:icon="@drawable/press"/>

        <item
            android:title="@string/ImagesDrawer"
            android:id="@+id/imagenesFragment"
            android:icon="@drawable/photo"/>

        <item
            android:title="@string/ExploreDrawer"
            android:id="@+id/explorarFragment"
            android:icon="@drawable/group"/>

    </group>

    <group android:id="@+id/groupUser"
        android:checkableBehavior="single">
        <item
            android:title="@string/ProfileDrawer"
            android:id="@+id/miperfilFragment"
            android:icon="@drawable/profile"/>

        <item
            android:title="@string/HelpDrawer"
            android:id="@+id/ayudaFragment"
            android:icon="@drawable/information"/>

        <item
            android:title="@string/FeedbackDrawer"
            android:id="@+id/feedbackFragment"
            android:icon="@drawable/send"/>
    </group>

</menu>