<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.dismovproject.ui.inicio.InicioFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_imagenes"
        android:name="com.example.dismovproject.ui.imagenes.ImagenesFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_publicaciones" />

    <fragment
        android:id="@+id/nav_publicaciones"
        android:name="com.example.dismovproject.ui.publicaciones.PublicacionesFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_imagenes" />
    <fragment
        android:id="@+id/explorarFragment"
        android:name="com.example.dismovproject.ExplorarFragment"
        android:label="@string/fragment_explorarr"
        tools:layout="@layout/fragment_explorar" />
</navigation>